--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl mipsel:mipsel 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel 
 
 cross-armv5tel-binutils-accel
   targettype x86 block!
@@ -7,6 +7,7 @@ cross-armv5tel-binutils-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv5tel autoreqprov off
@@ -49,6 +50,7 @@ cross-armv6l-binutils-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv6l autoreqprov off
@@ -91,6 +93,7 @@ cross-armv7l-binutils-accel
   targettype armv6l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv7l autoreqprov off
@@ -133,6 +136,7 @@ cross-armv7hl-binutils-accel
   targettype armv6l block!
   targettype armv7l block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv7hl autoreqprov off
@@ -175,6 +179,7 @@ cross-armv7nhl-binutils-accel
   targettype armv6l block!
   targettype armv7l block!
   targettype armv7hl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv7nhl autoreqprov off
@@ -210,6 +215,49 @@ cross-armv7nhl-binutils-accel
   targettype armv7nhl preun " done "
 
 
+cross-armv7tnhl-binutils-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+  targettype mipsel block!
+
+  targettype armv7tnhl autoreqprov off
+  targettype armv7tnhl provides "cross-arm-binutils-accel"
+  targettype armv7tnhl requires "glibc-x86-arm"
+  targettype armv7tnhl requires "zlib-x86-arm"
+  targettype armv7tnhl requires "binutils"
+  targettype armv7tnhl prefix /emul/ia32-linux
+  targettype armv7tnhl extension -arm
+  targettype armv7tnhl +/
+  targettype armv7tnhl -/usr/share/man
+  targettype armv7tnhl -/usr/share/doc
+  targettype armv7tnhl requires "meego-accelerator"
+
+
+
+  targettype armv7tnhl post " for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"
+  targettype armv7tnhl post "   binary="/usr/bin/${bin}" "
+  targettype armv7tnhl post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype armv7tnhl post "     mv ${binary} ${binary}.orig-arm && ln -s <prefix>${binary} ${binary}"
+  targettype armv7tnhl post "   else "
+  targettype armv7tnhl post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype armv7tnhl post "   fi "
+  targettype armv7tnhl post " done "
+
+  targettype armv7tnhl preun " for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"
+  targettype armv7tnhl preun "   binary="/usr/bin/${bin}" "
+  targettype armv7tnhl preun "   if test -e ${binary}.orig-arm ; then"
+  targettype armv7tnhl preun "     rm ${binary} && mv ${binary}.orig-arm ${binary}"
+  targettype armv7tnhl preun "   else "
+  targettype armv7tnhl preun "     echo "${binary}.orig-arm not present !" "
+  targettype armv7tnhl preun "   fi "
+  targettype armv7tnhl preun " done "
+
+
 cross-mipsel-binutils-accel
   targettype x86 block!
   targettype 32bit block!
@@ -218,6 +266,7 @@ cross-mipsel-binutils-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
 
   targettype mipsel autoreqprov off
   targettype mipsel provides "cross-arm-binutils-accel"
