Enable gold linker for all architectures;Added i486 as cross target Correct bug link; MIPS does not support gold so skipped installation Thanks to Tom Swindell for starting this work.
Signed-off-by: David Greaves <david@dgreaves.com>
Change-Id: I4522d4390cc1b6f05554438aa96a6e8b221e35e8

--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel i486:i486 
 
 cross-armv5tel-binutils-accel
   targettype x86 block!
@@ -9,6 +9,7 @@ cross-armv5tel-binutils-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv5tel autoreqprov off
   targettype armv5tel provides "cross-arm-binutils-accel"
@@ -52,6 +53,7 @@ cross-armv6l-binutils-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv6l autoreqprov off
   targettype armv6l provides "cross-arm-binutils-accel"
@@ -95,6 +97,7 @@ cross-armv7l-binutils-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7l autoreqprov off
   targettype armv7l provides "cross-arm-binutils-accel"
@@ -138,6 +141,7 @@ cross-armv7hl-binutils-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7hl autoreqprov off
   targettype armv7hl provides "cross-arm-binutils-accel"
@@ -181,6 +185,7 @@ cross-armv7nhl-binutils-accel
   targettype armv7hl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7nhl autoreqprov off
   targettype armv7nhl provides "cross-arm-binutils-accel"
@@ -224,6 +229,7 @@ cross-armv7tnhl-binutils-accel
   targettype armv7hl block!
   targettype armv7nhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7tnhl autoreqprov off
   targettype armv7tnhl provides "cross-arm-binutils-accel"
@@ -267,6 +273,7 @@ cross-mipsel-binutils-accel
   targettype armv7hl block!
   targettype armv7nhl block!
   targettype armv7tnhl block!
+  targettype i486 block!
 
   targettype mipsel autoreqprov off
   targettype mipsel provides "cross-arm-binutils-accel"
@@ -299,4 +306,48 @@ cross-mipsel-binutils-accel
   targettype mipsel preun "     echo "${binary}.orig-arm not present !" "
   targettype mipsel preun "   fi "
   targettype mipsel preun " done "
+
+
+cross-i486-binutils-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+  targettype armv7tnhl block!
+  targettype mipsel block!
+
+  targettype i486 autoreqprov off
+  targettype i486 provides "cross-arm-binutils-accel"
+  targettype i486 requires "glibc-x86-arm"
+  targettype i486 requires "zlib-x86-arm"
+  targettype i486 requires "binutils"
+  targettype i486 prefix /emul/ia32-linux
+  targettype i486 extension -arm
+  targettype i486 +/
+  targettype i486 -/usr/share/man
+  targettype i486 -/usr/share/doc
+  targettype i486 requires "meego-accelerator"
+
+
+
+  targettype i486 post " for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"
+  targettype i486 post "   binary="/usr/bin/${bin}" "
+  targettype i486 post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype i486 post "     mv ${binary} ${binary}.orig-arm && ln -s <prefix>${binary} ${binary}"
+  targettype i486 post "   else "
+  targettype i486 post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype i486 post "   fi "
+  targettype i486 post " done "
+
+  targettype i486 preun " for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"
+  targettype i486 preun "   binary="/usr/bin/${bin}" "
+  targettype i486 preun "   if test -e ${binary}.orig-arm ; then"
+  targettype i486 preun "     rm ${binary} && mv ${binary}.orig-arm ${binary}"
+  targettype i486 preun "   else "
+  targettype i486 preun "     echo "${binary}.orig-arm not present !" "
+  targettype i486 preun "   fi "
+  targettype i486 preun " done "
 
