Add support for building on x86_64 architecture.
Change-Id: I562786674d1dee76588e7ebb96a924c823bca210
Signed-off-by: Oleg Girko <ol+mer@infoserver.ru>

--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel i486:i486 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel i486:i486 x86_64:x86_64 
 
 cross-armv5tel-binutils-accel
   targettype x86 block!
@@ -10,6 +10,7 @@ cross-armv5tel-binutils-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv5tel autoreqprov off
   targettype armv5tel provides "cross-arm-binutils-accel"
@@ -54,6 +55,7 @@ cross-armv6l-binutils-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv6l autoreqprov off
   targettype armv6l provides "cross-arm-binutils-accel"
@@ -98,6 +100,7 @@ cross-armv7l-binutils-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7l autoreqprov off
   targettype armv7l provides "cross-arm-binutils-accel"
@@ -142,6 +145,7 @@ cross-armv7hl-binutils-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7hl autoreqprov off
   targettype armv7hl provides "cross-arm-binutils-accel"
@@ -186,6 +190,7 @@ cross-armv7nhl-binutils-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7nhl autoreqprov off
   targettype armv7nhl provides "cross-arm-binutils-accel"
@@ -230,6 +235,7 @@ cross-armv7tnhl-binutils-accel
   targettype armv7nhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7tnhl autoreqprov off
   targettype armv7tnhl provides "cross-arm-binutils-accel"
@@ -274,6 +280,7 @@ cross-mipsel-binutils-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype mipsel autoreqprov off
   targettype mipsel provides "cross-arm-binutils-accel"
@@ -318,6 +325,7 @@ cross-i486-binutils-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype x86_64 block!
 
   targettype i486 autoreqprov off
   targettype i486 provides "cross-arm-binutils-accel"
@@ -350,4 +358,49 @@ cross-i486-binutils-accel
   targettype i486 preun "     echo "${binary}.orig-arm not present !" "
   targettype i486 preun "   fi "
   targettype i486 preun " done "
+
+
+cross-x86_64-binutils-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+  targettype armv7tnhl block!
+  targettype mipsel block!
+  targettype i486 block!
+
+  targettype x86_64 autoreqprov off
+  targettype x86_64 provides "cross-arm-binutils-accel"
+  targettype x86_64 requires "glibc-x86-arm"
+  targettype x86_64 requires "zlib-x86-arm"
+  targettype x86_64 requires "binutils"
+  targettype x86_64 prefix /emul/ia32-linux
+  targettype x86_64 extension -arm
+  targettype x86_64 +/
+  targettype x86_64 -/usr/share/man
+  targettype x86_64 -/usr/share/doc
+  targettype x86_64 requires "meego-accelerator"
+
+
+
+  targettype x86_64 post " for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"
+  targettype x86_64 post "   binary="/usr/bin/${bin}" "
+  targettype x86_64 post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype x86_64 post "     mv ${binary} ${binary}.orig-arm && ln -s <prefix>${binary} ${binary}"
+  targettype x86_64 post "   else "
+  targettype x86_64 post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype x86_64 post "   fi "
+  targettype x86_64 post " done "
+
+  targettype x86_64 preun " for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"
+  targettype x86_64 preun "   binary="/usr/bin/${bin}" "
+  targettype x86_64 preun "   if test -e ${binary}.orig-arm ; then"
+  targettype x86_64 preun "     rm ${binary} && mv ${binary}.orig-arm ${binary}"
+  targettype x86_64 preun "   else "
+  targettype x86_64 preun "     echo "${binary}.orig-arm not present !" "
+  targettype x86_64 preun "   fi "
+  targettype x86_64 preun " done "
 
